# chrome-devtools-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md
.claude/skills/chrome-devtools/: SKILL.md
.github/workflows/: ci.yml  release.yml
chrome/: .metadata
extension/: package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/public/popup/: popup.html
extension/src/: service-worker.ts
extension/src/content/: index.ts
extension/src/lib/: daemon-connection.ts  recording-store.ts  types.ts
extension/src/popup/: popup.ts
scripts/: install.sh  uninstall.sh
src/: config.rs  devices.rs  error.rs  js_templates.rs  lib.rs  main.rs  output.rs  timeouts.rs  utils.rs
src/chrome/: action_executor.rs  event_store.rs  mod.rs  models.rs  recording.rs  session_manager.rs  storage.rs
src/chrome/collectors/: console.rs  dialog.rs  extension.rs  issues.rs  mod.rs  network.rs  pageerror.rs  trace.rs
src/cli/: commands.rs  dispatch.rs  mod.rs
src/client/: connection.rs  mod.rs
src/handlers/: a11y.rs  auth.rs  config_handler.rs  console.rs  describe.rs  dialog.rs  emulation.rs  export.rs  extras.rs  input.rs  inspect.rs  label.rs  mod.rs  navigation.rs  network.rs  performance.rs  recording.rs  screenshot.rs  script.rs  session.rs  sessions.rs
src/server/: adapter.rs  daemon.rs  http.rs  ipc.rs  mod.rs  protocol.rs  session_pool.rs
src/trace/: analyzer.rs  parser.rs
tests/: extension_test.rs  integration_extension_test.sh  integration_test.sh
