[package]
name = "chrome-devtools-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
authors = ["Chrome DevTools CLI Contributors"]
description = "High-performance Chrome DevTools Protocol CLI for browser automation and testing"
license = "MIT"
repository = "https://github.com/your-org/chrome-devtools-cli"
homepage = "https://github.com/your-org/chrome-devtools-cli"
keywords = ["chrome", "devtools", "cli", "automation", "performance"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"
default-run = "chrome-devtools-cli"

[lib]
name = "chrome_devtools_cli"
path = "src/lib.rs"

[[bin]]
name = "chrome-devtools-cli"
path = "src/main.rs"

[dependencies]
chromiumoxide = "0.8.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time", "signal", "io-std", "io-util", "sync", "net"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
which = "7.0"
once_cell = "1.20"
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
tokio-tungstenite = "0.24"
futures-util = "0.3"
async-trait = "0.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
url = "2.5.7"

[dev-dependencies]
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
