[package]
name = "chrome-devtools-cli"
version = "0.3.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["Chrome DevTools CLI Contributors"]
description = "High-performance Chrome DevTools Protocol CLI for browser automation and testing"
license = "MIT"
repository = "https://github.com/your-org/chrome-devtools-cli"
homepage = "https://github.com/your-org/chrome-devtools-cli"
keywords = ["chrome", "devtools", "cli", "automation", "performance"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"
default-run = "chrome-devtools-cli"

[lib]
name = "chrome_devtools_cli"
path = "src/lib.rs"

[[bin]]
name = "chrome-devtools-cli"
path = "src/main.rs"

[dependencies]
chromiumoxide = "0.8"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "signal", "io-std", "io-util", "sync", "net"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dirs = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3.1"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
which = "8"
once_cell = "1.21"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls"] }
base64 = "0.22"
tokio-tungstenite = "0.28"
futures-util = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5"
rusqlite = { version = "0.38", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

[dev-dependencies]
wiremock = "0.6"
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
